# jsonrpc-client-rs

./: Cargo.toml
core/: Cargo.toml
tcp/: Cargo.toml  README.md
tcp/src/: lib.rs
